--- a/index.html
+++ b/index.html
@@ -4153,8 +4153,8 @@ x_{1}^{j}\\
 \cdot\\ 
 x_{n}^{j}\\ 
 \end{pmatrix}_{(n \times 1)} \textit{ with } j \in [1,m]\]</span></p>
-<div id="htmlwidget-321bef0762efb8f3ccee" style="width:100%;height:auto;" class="datatables html-widget"></div>
-<script type="application/json" data-for="htmlwidget-321bef0762efb8f3ccee">{"x":{"filter":"none","caption":"<caption>For example: The following table contains data about 20 different types of food evaluated in 5 categories .<\/caption>","data":[["Oliveoil","Butter","Whiting","Beef","Chicken","Milk","Yogurt","Flamingcheese","Serra cheese","Rice","Bread","Bean","Sugar","Pasta","Lettuce","Onion","Spinach","Carrot","Potato","Cabbage"],[900,770,85,208,158,57,59,316,392,350,258,290,400,365,22,22,22,22,90,30],[0,0,19,18,20,3,3.2,26,26,7.5,7,20,0,10,1.8,0.9,2.6,0.6,2.5,2.9],[100,85,1,15,8.5,3,3.2,23.2,32,0.5,0.6,1.2,0,0.5,0.2,0.2,0.9,0,0,0.5],[0.1,13,25,12,18,126,125,800,800,10,24,170,15,20,70,31,104,104,9,234],[0.05,0.2,0.9,1.5,1.8,0.1,0.2,0.8,1.2,0.5,1.6,6.5,1,1,1.5,0.5,3.6,3.6,0.2,1.8]],"container":"<table class=\"display\">\n  <thead>\n    <tr>\n      <th> <\/th>\n      <th>Energy (kcal)<\/th>\n      <th>Protein (g)<\/th>\n      <th>Lipid (g)<\/th>\n      <th>Calcium (mg)<\/th>\n      <th>Iron (mg)<\/th>\n    <\/tr>\n  <\/thead>\n<\/table>","options":{"pageLength":5,"columnDefs":[{"className":"dt-right","targets":[1,2,3,4,5]},{"orderable":false,"targets":0}],"order":[],"autoWidth":false,"orderClasses":false,"lengthMenu":[5,10,25,50,100]}},"evals":[],"jsHooks":[]}</script>
+<div id="htmlwidget-012734aeb2b9d29339d1" style="width:100%;height:auto;" class="datatables html-widget"></div>
+<script type="application/json" data-for="htmlwidget-012734aeb2b9d29339d1">{"x":{"filter":"none","caption":"<caption>For example: The following table contains data about 20 different types of food evaluated in 5 categories .<\/caption>","data":[["Oliveoil","Butter","Whiting","Beef","Chicken","Milk","Yogurt","Flamingcheese","Serra cheese","Rice","Bread","Bean","Sugar","Pasta","Lettuce","Onion","Spinach","Carrot","Potato","Cabbage"],[900,770,85,208,158,57,59,316,392,350,258,290,400,365,22,22,22,22,90,30],[0,0,19,18,20,3,3.2,26,26,7.5,7,20,0,10,1.8,0.9,2.6,0.6,2.5,2.9],[100,85,1,15,8.5,3,3.2,23.2,32,0.5,0.6,1.2,0,0.5,0.2,0.2,0.9,0,0,0.5],[0.1,13,25,12,18,126,125,800,800,10,24,170,15,20,70,31,104,104,9,234],[0.05,0.2,0.9,1.5,1.8,0.1,0.2,0.8,1.2,0.5,1.6,6.5,1,1,1.5,0.5,3.6,3.6,0.2,1.8]],"container":"<table class=\"display\">\n  <thead>\n    <tr>\n      <th> <\/th>\n      <th>Energy (kcal)<\/th>\n      <th>Protein (g)<\/th>\n      <th>Lipid (g)<\/th>\n      <th>Calcium (mg)<\/th>\n      <th>Iron (mg)<\/th>\n    <\/tr>\n  <\/thead>\n<\/table>","options":{"pageLength":5,"columnDefs":[{"className":"dt-right","targets":[1,2,3,4,5]},{"orderable":false,"targets":0}],"order":[],"autoWidth":false,"orderClasses":false,"lengthMenu":[5,10,25,50,100]}},"evals":[],"jsHooks":[]}</script>
 <p>And</p>
 <p><span class="math display">\[\textit{food type}_{i}=\begin{pmatrix}
 \textit{Energy (kcal)}\\ 
@@ -4904,7 +4904,7 @@ s(x_{2},x_{1}) &amp; s^{2}(x_{2})
 0.6778735 &amp; -0.7351797\\ 
 0.7351784 &amp; 0.6778723
 \end{pmatrix}\]</span></p>
-<p>In</p>
+<p>In the following <a href="https://github.com/EduardoHidalgoGarcia/EduardoHidalgoWebsite/blob/master/Classes/MultivariateAnalysis/PCA_Example.xlsx">link</a> the auxiliar excel document used during the session is available.</p>
 </div>
 </div>
 <div id="step-6-deriving-the-new-dataset" class="section level3">
